update iphone mode span out of screen bug

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -10,7 +10,7 @@ body {
   /* padding: 0 10px; */
 }
 
-p {
+p,span {
   line-height: 1.7;
   word-wrap:break-word;
   word-break:break-all;
